bynkc/tests/fixtures/negative/224_sum_duplicate_scheme/src/demo.bynk
context demo

type UserId = String where NonEmpty

actor One { auth = Bearer(secret = "A"), identity = UserId }
actor Two { auth = Bearer(secret = "B"), identity = UserId }

service api from http {
  on GET("/x") () -> Effect[HttpResult[String]] by who: One | Two {
    Ok("x")
  }
}
